# guitar-tuning

./: README.md  cli.py  config.yaml  formulas.py  i18n.py  models.py  pyproject.toml
locales/en_US/: cli.ftl
locales/ru_RU/: cli.ftl
